<resources>
    <string name="app_name">FastCalc</string>
    <string name="go">go!</string>
    <string name="start">START \n Fasting</string>
    <string name="nxtHalf">Next half hour</string>
    <string name="nxtHr">Next Hour</string>
    <string name="last">Last for:</string>
    <string name="for12h">12</string>
    <string name="for16h">16</string>
    <string name="for18h">18</string>
    <string name="for20h">20</string>
    <string name="for24h">24</string>
    <string name="for36h">36</string>
    <string name="lastfinal">16</string>
    <string name="result">Resultado</string>
    <string name="back">-</string>
    <string name="hs">hs.</string>
    <string name="fastlast">16</string>
    <string name="OK">OK \n reset</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="event">Create Calendar Alarm</string>
    <string name="on">""</string>
    <string name="datecalendar"> </string>
    <string name="k" />
    <string name="Now">Now</string>
    <string name="key1">1</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key0">0</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="number">16</string>
    <string name="notext" />
    <string name="booleanKey">false</string>
    <string name="calendar">Calendar</string>
    <string name="prebutton">prebutton</string>
    <string name="postbutton">postbutton</string>
</resources>