<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundketo"
    app:layout_goneMarginBottom="16dp">

    <Button
        android:id="@+id/key6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey7"
        android:text="@string/key7"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/key7"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key"
        app:layout_constraintWidth_percent="0.333" />

    <Button
        android:id="@+id/key8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey9"
        android:text="@string/key9"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/key7"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/key2"
        app:layout_constraintTop_toBottomOf="@+id/key5"
        app:layout_constraintWidth_percent="0.333" />

    <Button
        android:id="@+id/key7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey8"
        android:text="@string/key8"
        android:textSize="60sp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/key1"
        app:layout_constraintTop_toBottomOf="@+id/key4"
        app:layout_constraintWidth_percent="0.333" />

    <Button
        android:id="@+id/key9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:onClick="setkey0"
        android:text="@string/key0"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key7" />

    <Button
        android:id="@+id/key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey4"
        android:text="@string/key4"
        android:textSize="60sp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key1"
        app:layout_constraintWidth_percent="0.333" />

    <Button
        android:id="@+id/key5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey6"
        android:text="@string/key6"
        android:textSize="60sp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/key2"
        app:layout_constraintTop_toBottomOf="@+id/key3"
        app:layout_constraintWidth_percent="0.333" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/hs"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/key3"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/key4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey5"
        android:text="@string/key5"
        android:textSize="60sp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/key1"
        app:layout_constraintTop_toBottomOf="@+id/key2"
        app:layout_constraintWidth_percent="0.333" />

    <Button
        android:id="@+id/key1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey1"
        android:text="@string/key1"
        android:textSize="60sp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintWidth_percent="0.333" />

    <Button
        android:id="@+id/key2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey2"
        android:text="@string/key2"
        android:textSize="60sp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/key1"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintWidth_percent="0.333" />

    <Button
        android:id="@+id/key3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="setkey3"
        android:text="@string/key3"
        android:textSize="60sp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/key2"
        app:layout_constraintTop_toTopOf="@+id/key2"
        app:layout_constraintWidth_percent="0.333" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:autofillHints=""
        android:background="@drawable/buttonrojo"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:onClick="openOldActivity2"
        android:scaleType="fitXY"
        android:text="@string/notext"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/textLast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/last"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/key1"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ImageView
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/key1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/prebutton"
        app:layout_constraintWidth_percent="0.33" />

    <ImageView
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/key1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/postbutton"
        app:layout_constraintWidth_percent="0.33" />


</androidx.constraintlayout.widget.ConstraintLayout>
