<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundketo"
    android:backgroundTint="#32FFFFFF"
    android:backgroundTintMode="add">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="274dp"
        android:layout_height="246dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/result"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#307C33"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/gobuttongreen"
        android:foreground="@android:drawable/ic_media_previous"
        android:foregroundGravity="left|center"
        android:onClick="openOldActivity"
        android:text="@string/OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button14"
        android:layout_width="170dp"
        android:layout_height="168dp"
        android:layout_marginBottom="100dp"
        android:background="@null"
        android:onClick="AddCalendarEvent"
        android:contentDescription="@string/calendar"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/button_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>